NIFI-13996 Improved removal of temporary files after a build (#9551)
Signed-off-by: David Handerman <exceptionfactory@apache.org>
Co-authored-by: David Handermann <exceptionfactory@apache.org>